--- a/static/css/common.css
+++ b/static/css/common.css
@@ -1094,6 +1094,9 @@ li.properties-item.prop-date {
 .file-list-item:hover {
   background-color: #f5f5f5;
 }
+.file-list-item:hover .item-handler a.handler-item {
+  opacity: 1;
+}
 .file-list-item > div {
   margin-left: 26px;
 }
@@ -1148,11 +1151,15 @@ li.properties-item.prop-date {
   color: #808080;
 }
 .item-handler a.handler-item {
+  display: inline-block;
   text-decoration: none;
   cursor: pointer;
   color: #808080;
   padding: 0 6px;
   line-height: 24px;
+  vertical-align: middle;
+  opacity: 0;
+  transition: opacity .2s;
 }
 .item-handler a.handler-item:hover {
   color: #0c92f3;
