file upload with progress bar

--- a/static/css/common.css
+++ b/static/css/common.css
@@ -1164,4 +1164,132 @@ li.properties-item.prop-date {
 .item-handler a.handler-item:hover {
   color: #0c92f3;
 }
+
+.background-uploader {
+  position: fixed;
+  bottom: 12px;
+  right: 16px;
+  width: 500px;
+  z-index: 2333;
+  height: auto;
+  max-height: 600px;
+  box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+  transition: max-height .2s ease;
+}
+.background-uploader.minimize {
+  max-height: 45px;
+  overflow: hidden;
+}
+.card {
+  position: relative;
+  background-color: #fff;
+}
+.card-header {
+  box-shadow: 0 1px 0 rgba(0,0,0,0.1);
+  padding: 12px;
+}
+.card-header * {
+  display: inline-block;
+}
+.card-header p {
+  font-size: 15px;
+  width: 360px;
+}
+.card-header a {
+  font-size: 18px;
+  color: #A6A6A6;
+  cursor: pointer;
+}
+.card-header a.maximize-uploader, .card-header a.minimize-uploader {
+  position: absolute;
+  top: 10px;
+  right: 50px;
+  padding: 5px;
+}
+.card-header a.close-uploader {
+  position: absolute;
+  top: 12px;
+  right: 12px;
+  font-size: 34px;
+  line-height: 20px;
+}
+.upload-list {
+  max-height: 540px;
+  padding: 10px 0 0 10px!important;
+  overflow-y: auto;
+  background-color: #f9f9f9;
+}
+.background-uploader .upload-item {
+  margin: 0 10px 10px 0;
+  background-color: #eee;
+  border-radius: 2px;
+}
+.upload-item div {
+  display: inline-block;
+  vertical-align: top;
+}
+.upload-file-icon {
+  display: inline-block;
+  top: 2px;
+  margin-right: 5px;
+  font-size: 34px;
+}
+.upload-item div.upload-file-item {
+  position: relative;
+  width: 450px;
+  padding: 6px;
+}
+.upload-item div.upload-file-item p {
+  display: inline-block;
+  white-space: nowrap;
+  vertical-align: text-top;
+}
+.upload-filename, .upload-folder {
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.upload-filename {
+  font-size: 14px;
+  max-width: 195px;
+  padding-top: 8px;
+}
+.upload-filename p:first-child {
+  max-width: 140px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.upload-info {
+  font-size: 12px;
+  margin: 10px 0 0 6px;
+}
+.upload-filesize {
+  color: #a6a6a6;
+}
+.upload-folder {
+  max-width: 110px;
+  color: #a6a6a6;
+  padding-left: 4px;
+}
+.upload-progressbar {
+  position: absolute;
+  bottom: 9px;
+  height: 2px;
+  left: 45px;
+  width: 400px;
+  background-color: #d8eefd;
+}
+.upload-progressbar .upload-progress {
+  background-color: #3da8f5;
+  height: 2px;
+  width: 0;
+}
+.upload-handler {
+  font-size: 24px;
+  line-height: 51px;
+}
+.upload-handler a {
+  padding: 0 5px;
+  cursor: pointer;
+  color: #a6a6a6;
+}
 /* file center end */
