--- a/static/css/common.css
+++ b/static/css/common.css
@@ -960,6 +960,8 @@ a.dd-list-item i {
   margin-top: 10px;
   background-color: #fff;
   padding: 0;
+  min-height: 500px;
+  border-radius: 3px;
 }
 .filecenter ul {list-style-type: none; margin: 0; padding: 0;}
 .filecenter .check-box {
@@ -1218,6 +1220,19 @@ li.properties-item.prop-date {
   padding: 10px 0 0 10px!important;
   overflow-y: auto;
   background-color: #f9f9f9;
+}
+.upload-list::-webkit-scrollbar-track{
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+  background-color: #fff;
+  border-radius: 2px;
+}
+.upload-list::-webkit-scrollbar{
+  width: 4px;
+  background-color: #fff;
+}
+.upload-list::-webkit-scrollbar-thumb{
+  background-color: #9E9E9E;
+  border-radius: 2px;
 }
 .background-uploader .upload-item {
   margin: 0 10px 10px 0;
