--- a/static/css/common.css
+++ b/static/css/common.css
@@ -138,6 +138,49 @@ input, textarea {
 }
 /* modal-dialog end */
 
+/* spinner start */
+.spinner {
+  margin: 20px auto;
+  width: 70px;
+  text-align: center;
+}
+
+.spinner > div {
+  width: 20px;
+  height: 14px;
+  background-color: #666;
+  border-radius: 10%;
+  display: inline-block;
+  -webkit-animation: sk-bouncedelay 1.4s infinite ease-in-out both;
+  animation: sk-bouncedelay 1.4s infinite ease-in-out both;
+}
+
+.spinner .bounce1 {
+  -webkit-animation-delay: -0.32s;
+  animation-delay: -0.32s;
+}
+
+.spinner .bounce2 {
+  -webkit-animation-delay: -0.16s;
+  animation-delay: -0.16s;
+}
+
+@-webkit-keyframes sk-bouncedelay {
+  0%, 80%, 100% { -webkit-transform: scale(0) }
+  40% { -webkit-transform: scale(1.0) }
+}
+
+@keyframes sk-bouncedelay {
+  0%, 80%, 100% { 
+    -webkit-transform: scale(0);
+    transform: scale(0);
+  } 40% { 
+    -webkit-transform: scale(1.0);
+    transform: scale(1.0);
+  }
+}
+/* spinner end */
+
 .priority-0 {
   background-color: #a6a6a6;
 }
@@ -953,6 +996,11 @@ a.dd-list-item i {
   cursor: pointer;
 }
 .img-viewer-tool a {text-decoration: none;}
+.loadmore {
+  text-align: center;
+  line-height: 60px;
+  cursor: pointer;
+}
 /* group chat end */
 
 /* file center start */
